# saol-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: test_asset_trinity.py  test_guardian.py  test_telemetry.py
src/: inspect_mcp_v2.py  main.py
src/core/: telemetry_schema.py
src/guardian/: guardian_rules.yaml  policy_engine.py
src/middleware/: guardian.py  telemetry.py
src/tools/: drive_ops.py  firebase_ops.py  graph_ops.py  telemetry_ops.py
